--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npx vite build",
+    "preview": "vite preview",
+    "vercel-build": "npx vite build"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
+    "baseline-browser-mapping": "^2.9.15",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "vite": "^5.0.0"
